resolve img stretching

--- a/packages/modos-static-site/components/map-app/map.module.scss
+++ b/packages/modos-static-site/components/map-app/map.module.scss
@@ -81,19 +81,22 @@
         flex-flow: column;
         justify-content: flex-start;
         height: 80%;
-      }
-      figure img {
-        // min-height: 150px;
-        border: 1px dotted lightgray;
-        font-size: 0.8em;
-        text-align: center;
-        max-height: 90%;
-      }
-      figure figcaption {
-        min-height: 4em ;
-        font-style: italic;
-        text-align: justify;
-        overflow-y: auto;
+
+        .img-container {  
+          background: black;
+          font-size: 0.8em;
+          text-align: center;
+          max-width: 100%;
+          height: auto;
+          max-height: 90%;          
+        }
+
+        figcaption {
+          min-height: 4em ;
+          font-style: italic;
+          text-align: justify;
+          overflow-y: auto;
+        }
       }
     }
 
